# vikiCAD

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
cli/: CMakeLists.txt  main.cpp
cmake/: VikiWarnings.cmake
core/: CMakeLists.txt  Version.cpp  Version.h
core/cmd/: Command.h  CommandContext.h  CommandProcessor.cpp  CommandProcessor.h  Commands2D.cpp  Commands3D.cpp  Commands3DFinish.cpp  CommandsAnnotate.cpp  CommandsArrayNote.cpp  CommandsAssembly.cpp  CommandsBlock.cpp  CommandsCam.cpp  CommandsDescribe.cpp  CommandsDraw2.cpp  CommandsEdit.cpp  CommandsFeatEdit.cpp  CommandsGear.cpp  CommandsInspect.cpp  CommandsLayer.cpp  CommandsLayout.cpp  CommandsMeasure.cpp  CommandsModify.cpp  CommandsParam.cpp  CommandsPattern3D.cpp  CommandsSketch.cpp  CommandsSubShapeOps.cpp  Input.cpp  Input.h
core/doc/: Annotations.cpp  Annotations.h  ArrayEntity.cpp  ArrayEntity.h  Block.cpp  Block.h  DimStyle.h  Document.cpp  Document.h  Entities.cpp  Entities.h  EntitiesEx.cpp  EntitiesEx.h  Entity.cpp  Entity.h  EntityFactory.cpp  EntityFactory.h  GerberRole.cpp  GerberRole.h  Layer.h  Layout.h  ParamTable.cpp  ParamTable.h  RectProfile.cpp  RectProfile.h  SelectionSet.h  StickyNote.cpp  StickyNote.h
core/edit/: EditOps.cpp  EditOps.h  MinDist.cpp  MinDist.h
core/geom/: BBox2d.h  GearGeometry.cpp  GearGeometry.h  GeomUtil.cpp  GeomUtil.h  Intersect.cpp  Intersect.h  Regions.cpp  Regions.h  Vec2d.cpp  Vec2d.h  Xform2d.cpp  Xform2d.h
core/io/: DxfExporter.cpp  DxfExporter.h  DxfImporter.cpp  DxfImporter.h  ExcellonIo.cpp  ExcellonIo.h  ExcellonWriter.cpp  ExcellonWriter.h  GerberIo.cpp  GerberIo.h  GerberKit.cpp  GerberKit.h  GerberKitWriter.cpp  GerberKitWriter.h  GerberWriter.cpp  GerberWriter.h  NativeStore.cpp  NativeStore.h  ObjIo.cpp  ObjIo.h  PdfPlotter.cpp  PdfPlotter.h  QueryJson.cpp  QueryJson.h  StepIo.cpp  StepIo.h  StlIo.cpp  StlIo.h
core/render/: DrawingProjection.cpp  DrawingProjection.h  HitTest.cpp  HitTest.h  Primitives.h  StandardViews.cpp  StandardViews.h
core/script/: ScriptRunner.cpp  ScriptRunner.h
core/snap/: SnapEngine.cpp  SnapEngine.h
core/solid/: FeatureParams.cpp  FeatureParams.h  FeatureTree.cpp  FeatureTree.h  OcctOps.cpp  OcctOps.h  SolidEntity.cpp  SolidEntity.h  SolidMetrics.cpp  SolidMetrics.h  SolidOps.cpp  SolidOps.h  SubShape.cpp  SubShape.h  WorkPlane.h
docs/: AGENT.md  DEVLOG.md  FUSION_GAP.md  LESSONS.md  PCB_CAM.md  REPRISE.md
gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  PreferencesDialog.cpp  PreferencesDialog.h  Theme.cpp  Theme.h  main.cpp
gui/canvas/: Camera2d.h  CanvasWidget.cpp  CanvasWidget.h
gui/ipc/: RpcServer.cpp  RpcServer.h
gui/occview/: OcctViewWidget.cpp  OcctViewWidget.h
gui/panels/: AssemblyPanel.cpp  AssemblyPanel.h  CommandBar.cpp  CommandBar.h  LayerPanel.cpp  LayerPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  ToolPanels.cpp  ToolPanels.h
packaging/: vikicad.desktop  vikicad.xml
scripts/: build-and-test.sh  check-menu-coverage.sh  gerber-export-diff.sh  gerber-ref-diff.sh  gui-smoke.sh  overnight-batch2.mjs  overnight-batch3.mjs  overnight-workflow.mjs
tests/: CMakeLists.txt  test_annotations.cpp  test_cam_export.cpp  test_cam_inspect.cpp  test_cmd_ergonomics.cpp  test_commands.cpp  test_describe.cpp  test_document.cpp  test_drawing_view.cpp  test_dxf_import.cpp  test_dxf_roundtrip.cpp  test_edgeops_mate_draft.cpp  test_editops.cpp  test_entities2.cpp  test_excellon.cpp  test_excellon_export.cpp  test_featedit.cpp  test_feature_params.cpp  test_feature_tree.cpp  test_gear.cpp  test_geom_util.cpp  test_gerber.cpp  test_gerber_export.cpp  test_gerberkit.cpp  test_inspect.cpp  test_interference.cpp  test_layer_stack.cpp  test_m2_commands.cpp  test_m5.cpp  test_m7_solids.cpp  test_mindist.cpp  test_move3d_points.cpp  test_obj_export.cpp  test_occt_smoke.cpp  test_params.cpp  test_pattern3d.cpp  test_rect_profile.cpp  test_regions.cpp  test_section.cpp  test_sketch.cpp  (+13 more)
tests/golden/excellon/: decimal.txt  g85_slot.txt  lz_inch.txt  metric.txt  tz_inch.txt
tests/golden/gerber/: arc_g75.gbr  attrs_x2.gbr  draw_round.gbr  flash_std.gbr  g74_single.gbr  lpc_redraw.gbr  macro_roundedrect.gbr  mm_file.gbr  polarity_order.gbr  region.gbr  zeros_leading.gbr  zeros_trailing.gbr
